--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store": "^6.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ngx-infinite-scroll": "^6.0.1",
     "primeng": "^6.1.2",
     "redux": "^4.0.0",
     "rxjs": "^6.0.0",
