--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css",
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/primeng/resources/themes/darkness/theme.css"
+              "./node_modules/primeng/resources/themes/darkness/theme.css",
+              "./node_modules/ag-grid/dist/styles/ag-grid.css",
+              "./node_modules/ag-grid/dist/styles/ag-theme-balham.css"
             ],
             "scripts": []
           },
@@ -126,5 +128,10 @@
       }
     }
   },
-  "defaultProject": "Practo"
+  "defaultProject": "Practo",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
