--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^18.1.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-infinite-scroll": "^6.0.1",
